Update Diseño y arquitectura

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <base href="https://jank1510.github.io/ecommerce-product-page-main/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
+<style>body{background:white}</style><link rel="stylesheet" href="styles.4b9c0122d6d57e3f.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.4b9c0122d6d57e3f.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.cfd1840774754cec.js" type="module"></script><script src="polyfills.f5e7000ec999a0d4.js" type="module"></script><script src="main.9a5dc7806cdfbcde.js" type="module"></script>
+<script src="runtime.032cddfcf57bc716.js" type="module"></script><script src="polyfills.5446b90c29b86a37.js" type="module"></script><script src="main.e7d8e2ae12e6529a.js" type="module"></script>
 
 </body></html>
